# ragbooster

./: .gitattributes  .gitignore  Cargo.toml  README.md  demo-boosting-a-small-llm.ipynb  demo-boosting-a-small-qa-model.ipynb  demo-data-imputation.ipynb  demo-question-answering.ipynb  pyproject.toml  ragbooster-demo.ipynb  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yml
benches/: generate_b.rs  generate_iprp.rs
demo_data/: buy.csv  gpt35-cache.sqlite  qa-cache.pkl  qa_ctx-cache.pkl  restaurant.csv  rp3b-cache.sqlite  wikifact_place_of_birth_helm.json
python/ragbooster/: __init__.py  core.py  demo.py  generator.py  rag.py  retriever.py  tuning.py
src/: lib.rs
src/mle/: gradient.rs  mod.rs  prob.rs  tensors.rs  types.rs
test_data/: B_M10_K3_p025075_E5.npy  B_M10_K3_p05_E5.npy  IP_M10_K3_p025075.npy  IP_M10_K3_p05.npy  RP_M10_K3_p025075.npy  RP_M10_K3_p05.npy  generate_test_npys.ipynb  python_benches.ipynb
test_data/wikifact/: author_websites.txt  author_websites_by_domain.jsonl  currency.jsonl  currency_websites.txt  currency_websites_by_domain.jsonl  grouping.ipynb  place_of_birth.jsonl  place_of_birth_websites.txt  place_of_birth_websites_by_domain.jsonl
tests/: reproduce_python_probs.rs  toy_example.rs  wikifact.rs
